[package]
name = "moguls"
version = "0.1.0"
edition = "2021"
authors = ["Seongsu Park <56729421+seongs1024@users.noreply.github.com>"]
description = """
  Let the words of financial moguls inspire and guide you in your quest for financial excellence and understanding.
"""
readme = "README.md"
repository = "https://github.com/seongs1024/economic_indicator_finder"
license = "MIT"
keywords = ["finance", "economics", "moguls", "text-processing"]
categories = ["text-processing"]
documentation = "https://docs.rs/moguls"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
chrono-tz = "0.8.4"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
reqwest = { version = "0.11.22", features = ["blocking"] }

[dev-dependencies]
